[tool.poetry]
name = "pymock-api"
version = "0.1.0"
description = "A Python tool to mock API easily and humanly."
authors = ["Liu, Bryant <chi10211201@cycu.org.tw>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pymock_api"}]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
pytest-html = "^3.1.1"
pytest-rerunfailures = "^10.2"
coverage = "^6.2"
codecov = "^2.1.12"
coveralls = "^3.3.1"
tox = "^3.25.1"
Flask = "^2.2.3"
pre-commit = "^3.0.4"
pylint = "^2.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
