[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pymock-api"
version = "0.1.0"
description = "A Python tool to mock API easily and humanly."
authors = ["Liu, Bryant <chi10211201@cycu.org.tw>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pymock_api"}]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
# Extra dependency of web framework *Flask* with WSGI server *Gunicorn*
Flask = {version = "^2.2.3", extras = ["flask"]}
gunicorn = {version = "^20.1.0", extras = ["flask"]}

[tool.poetry.group.dev.dependencies]
# Dependency for test
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
pytest-html = "^3.1.1"
pytest-rerunfailures = "^10.2"
coverage = "^6.2"
codecov = "^2.1.12"
coveralls = "^3.3.1"
# Dependency for CI
tox = "^3.25.1"
pre-commit = "^3.0.4"
pylint = "^2.16.2"
# Dependency of web framework Flask
Flask = "^2.2.3"
gunicorn = "^20.1.0"
# Dependency of web framework FastAPI
fastapi = {extras = ["all"], version = "^0.95.0"}
uvicorn = {extras = ["standard"], version = "^0.21.1"}
